# RuthIron

./: Cargo.toml  README.md  chess_ai_final.onnx
benches/: bitboard_bench.rs  eval_bench.rs  legal_moves_bench.rs  model_bench.rs  nnue_bench.rs  position_bench.rs
src/: lib.rs  main.rs
src/board/: bitboard.rs  mod.rs  position.rs  zobrist.rs
src/eval/: eval_util.rs  evaluate.rs  imbalance.rs  initiative.rs  king_safety.rs  material.rs  mobility.rs  mod.rs  pawns.rs  pst.rs  space.rs  threats.rs  weights.rs
src/iron/: model.rs
src/movegen/: legal_moves.rs  magic.rs  mod.rs  moves.rs
src/nnue/: mod.rs  nnue.rs  nnue_accumulator.rs  nnue_weights.rs
src/search/: alphabeta.rs  mod.rs  pruning.rs  search_node.rs  time_management.rs  transposition.rs
src/uci/: mod.rs  protocol.rs
